--- a/cicids2017.ipynb
+++ b/cicids2017.ipynb
@@ -1913,7 +1913,9 @@
    "cell_type": "code",
    "execution_count": 13,
    "id": "9090f5a0-52a2-4c69-901f-fd05c6ec241c",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "ename": "ValueError",
