--- a/kddcup1999.ipynb
+++ b/kddcup1999.ipynb
@@ -577,7 +577,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print_reports(sgd_clf, X_test, y_test, sgd_pred, ['Benign', 'Attack'], 'SGD Classifier Confusion Matrix')"
+    "# print_reports(sgd_clf, X_test, y_test, sgd_pred, ['Benign', 'Attack'], 'SGD Classifier Confusion Matrix')"
    ]
   },
   {
@@ -598,7 +598,7 @@
     }
    ],
    "source": [
-    "X_train"
+    "X_train.value_counts()"
    ]
   },
   {
@@ -619,9 +619,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "print(f'Size of training dataset = {X_train_res.shape}')\n",
-    "print(f'Size of testing dataset = {y_train_res.shape}')"
+    "X_train_res.value_counts()"
    ]
   }
  ],
