--- a/kddcup1999.ipynb
+++ b/kddcup1999.ipynb
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "a70b61f0-5743-4677-8b73-2a6e4145fd7e",
    "metadata": {},
    "outputs": [],
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "bead0af9-1d59-4b67-9a6a-6088df47a508",
    "metadata": {},
    "outputs": [],
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "ca15a9df-600a-416b-93a3-62b6fb4d97fc",
    "metadata": {},
    "outputs": [
@@ -565,9 +565,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# sgd_clf = SGDClassifier(max_iter=1000)\n",
-    "# sgd_clf.fit(X_train, y_train)\n",
-    "# sgd_pred = sgd_clf.predict(X_test)"
+    "sgd_clf = SGDClassifier(max_iter=1000)\n",
+    "sgd_clf.fit(X_train, y_train)\n",
+    "sgd_pred = sgd_clf.predict(X_test)"
    ]
   },
   {
@@ -577,7 +577,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# print_reports(sgd_clf, X_test, y_test, sgd_pred, ['Benign', 'Attack'], 'SGD Classifier Confusion Matrix')"
+    "print_reports(sgd_clf, X_test, y_test, sgd_pred, ['Benign', 'Attack'], 'SGD Classifier Confusion Matrix')"
    ]
   },
   {
