--- a/cicids2017.ipynb
+++ b/cicids2017.ipynb
@@ -1857,9 +1857,7 @@
    "cell_type": "code",
    "execution_count": 20,
    "id": "5baf0e83-ef27-425e-92a2-f5cf9b291d9f",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1914,6 +1912,10 @@
    "execution_count": 13,
    "id": "9090f5a0-52a2-4c69-901f-fd05c6ec241c",
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "scrolled": true
    },
    "outputs": [
